@@ -1,4 +1,4 @@
-/* $OpenBSD: ssh-agent.c,v 1.169 2010/08/31 11:54:45 djm Exp $ */
+/* $OpenBSD: ssh-agent.c,v 1.170 2010/08/31 12:33:38 djm Exp $ */
 /*
  * Author: Tatu Ylonen <ylo@cs.hut.fi>
  * Copyright (c) 1995 Tatu Ylonen <ylo@cs.hut.fi>, Espoo, Finland
@@ -1146,7 +1146,7 @@ main(int ac, char **av)
 	prctl(PR_SET_DUMPABLE, 0);
 #endif
 
-	SSLeay_add_all_algorithms();
+	OpenSSL_add_all_algorithms();
 
 	__progname = ssh_get_progname(av[0]);
 	init_rng();
